--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,14 @@
       <groupId>io.reactivex</groupId>
       <artifactId>rxjava</artifactId>
       <version>1.3.0</version>
+    </dependency><!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.16.16</version>
+      <scope>provided</scope>
     </dependency>
+
 
   </dependencies>
 </project>
